--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<title>Calculator</title>
 	
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
 	<meta name="viewport" content="initial-scale=1,user-scalable=no">
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/touch-icon-iphone-retina.png" />
@@ -49,6 +49,6 @@
 			<button value="=" class="row6 col3 equ">=</button>
 		</div>
 	</div>
-	<script src="script.js" type="text/javascript"></script>
+	<script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
