--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div id="keypad">
 			<button value="s" class="row1 col2">S</button>
 			<button value="h" class="row1 col3">H</button>
-			<button value="h" class="row2 col1">+/-</button>
+			<button value="+-" class="row2 col1">+/-</button>
 			<button value="0" class="row6 col1">0</button>
 			<button value="1" class="row5 col1">1</button>
 			<button value="2" class="row5 col2">2</button>
