--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="navbar">Your History <span id="history-close">&times;</span></div>
 			<ul id="list"><li id="history-help"><p>Your most recent results will be saved here every time you tap the equals button. A quick tap of one of these will use it in the current equation.</p></li></ul>
 		</div>
-		<div id="result" style="width:296px;font-size:46px;">0</div>
+		<div id="result" style="width:296px;">0</div>
 		<div id="equation"></div>
 		<div id="keypad">
 			<button value="h" class="row1 col2 btn-history">History</button>
