Added flash to history button when a new item is added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div id="result" style="width:296px;">0</div>
 		<div id="equation"></div>
 		<div id="keypad">
-			<button value="h" class="row1 col2 btn-history">History</button>
+			<button value="h" class="row1 col2 btn-history" id="his">History</button>
 			<button value="+-" class="row2 col1">+/-</button>
 			<button value="0" class="row6 col1">0</button>
 			<button value="1" class="row5 col1">1</button>
