--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<div id="calculator">
 		<div id="history">
 			<div class="navbar">Your History <span id="history-close">&times;</span></div>
-			<ul id="list"><li id="history-help"><p>Your most recent results will be saved here every time you tap the equals button. A quick tap of one of these will use it in the current equation.</p></li></ul>
+			<ul id="list"></ul>
+			<p id="history-help">Your most recent results will be saved here every time you tap the equals button. A quick tap of one of these will use it in the current equation.<br/><br/>Tap and hold on the close button to clear your history.</p>
 		</div>
 		<div id="result" style="width:296px;">0</div>
 		<div id="equation"></div>
