--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 			<button value="=" class="row6 col3 equ">=</button>
 		</div>
 	</div>
+	<div id="landscape">
+		<p>This app does not work in landscape.</p>
+	</div>
 	<script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
