Disabled automatic phone format detection (issue #23)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/touch-icon-iphone-retina.png" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+	<meta name="format-detection" content="telephone=no">
 </head>
 <body>
 	<div id="calculator">
