--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div id="equation"></div>
 		<div id="keypad">
 			<button value="h" class="row1 col2 btn-history" id="his">History</button>
-			<button value="+-" class="row2 col1">+/-</button>
+			<button value="+-" class="row2 col1 plus-minus">+/-</button>
 			<button value="0" class="row6 col1">0</button>
 			<button value="1" class="row5 col1">1</button>
 			<button value="2" class="row5 col2">2</button>
