New install screen

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 	<div id="landscape">
 		<p>This app does not work in landscape.</p>
 	</div>
+	<div id="install">
+		<div id="instructions">
+			<div id="app-icon"></div>
+			<span>Add to Home Screen</span><br/>
+			to install on the iPhone
+		</div>
+	</div>
 	<script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
