--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
-<!--html manifest="calculator.appcache"-->
-<html>
+<!--html lang="en" manifest="calculator.appcache"-->
+<html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>Calculator</title>
+	<meta charset="utf-8">
+	<title>Calculator - A calculator web app for iPhone</title>
 	
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta name="author" content="Phil Buchanan">
+	<meta name="description" content="A minimal calculator for iPhone with support for backspace, brackets and history.">
 	
-	<meta name="viewport" content="initial-scale=1,user-scalable=no">
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/touch-icon-iphone-retina.png" />
+	<meta name="viewport" content="initial-scale=1, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
 	<meta name="apple-mobile-web-app-status-bar-style" content="default" />
+	<meta name="apple-mobile-web-app-title" content="Calculator">
 	<meta name="format-detection" content="telephone=no">
+	
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/touch-icon-iphone-retina.png" />
 </head>
 <body>
 	<div id="calculator">
 		<div id="history">
 			<div class="navbar">Your History<span id="history-close">&times;</span></div>
 			<ul id="list"></ul>
-			<p id="history-help">Your most recent results will be saved here every time you tap the equals button. A quick tap of one of these will use it in the current equation.<br/><br/>Tap and hold on the close button to clear your history.</p>
+			<p id="history-help">Your most recent results will be saved here every time you tap the equals button. A quick tap of one of these will use it in the current equation.<br/><br/>Tap and hold on the &lsquo;&times;&rsquo; button to clear your history.</p>
 		</div>
 		<div id="result" style="width:296px;">0</div>
 		<div id="equation"></div>
 		<div id="keypad">
 			<button value="h" class="row1 col2 btn-history" id="his">History</button>
-			<button value="+-" class="row2 col1 plus-minus">+/-</button>
+			<button value="+-" class="row2 col1 plus-minus">+/&ndash;</button>
 			<button value="0" class="row6 col1">0</button>
 			<button value="1" class="row5 col1">1</button>
 			<button value="2" class="row5 col2">2</button>
@@ -56,6 +60,7 @@
 			<span>Add to Home Screen</span><br/>
 			to install on the iPhone
 		</div>
+		<a href="https://twitter.com/philbuchanan" target="_blank" id="twitter">@philbuchanan</a>
 	</div>
 	<script src="js/script.js" type="text/javascript"></script>
 </body>
