New backspace button
- tweaked the fonts slightly

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<button value="+" class="row5 col4">+</button>
 			<button value="(" class="row2 col2">(</button>
 			<button value=")" class="row2 col3">)</button>
-			<button value="b" class="row1 col4" id="bs">&larr;</button>
+			<button value="b" class="row1 col4" id="bs"></button>
 			<button value="c" class="row1 col1">c</button>
 			<button value="=" class="row6 col3 equ">=</button>
 		</div>
