Minor design tweaks to status bar appearance

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<ul id="list"></ul>
 			<p id="history-help">Your most recent results will be saved here every time you tap the equals button. A quick tap of one of these will use it in the current equation.<br/><br/>Tap and hold on the &lsquo;&times;&rsquo; button to clear your history.</p>
 		</div>
-		<div id="statusbar"></div>
+		<div class="statusbar"></div>
 		<div id="result">0</div>
 		<div id="equation"></div>
 		<div id="keypad">
@@ -54,6 +54,7 @@
 		</div>
 	</div>
 	<div id="landscape">
+		<div class="statusbar"></div>
 		<p>This app does not work in landscape.</p>
 	</div>
 	<div id="install">
