Added landscape support for iPhones
- new appstate property to detect if the app is in landscape

--- a/index.html
+++ b/index.html
@@ -29,33 +29,29 @@
 		<div id="result">0</div>
 		<div id="equation"></div>
 		<div id="keypad">
-			<button value="h" class="row1 col2 btn-history" id="his">History</button>
-			<button value="+-" class="row2 col1 plus-minus">+/&ndash;</button>
-			<button value="0" class="row6 col1">0</button>
-			<button value="1" class="row5 col1">1</button>
-			<button value="2" class="row5 col2">2</button>
-			<button value="3" class="row5 col3">3</button>
-			<button value="4" class="row4 col1">4</button>
-			<button value="5" class="row4 col2">5</button>
-			<button value="6" class="row4 col3">6</button>
-			<button value="7" class="row3 col1">7</button>
-			<button value="8" class="row3 col2">8</button>
-			<button value="9" class="row3 col3">9</button>
-			<button value="." class="row6 col2">.</button>
-			<button value="/" class="row2 col4">&divide;</button>
-			<button value="*" class="row3 col4">&times;</button>
-			<button value="-" class="row4 col4">&ndash;</button>
-			<button value="+" class="row5 col4">+</button>
-			<button value="(" class="row2 col2">(</button>
-			<button value=")" class="row2 col3">)</button>
-			<button value="b" class="row1 col4" id="bs"></button>
-			<button value="c" class="row1 col1">c</button>
-			<button value="=" class="row6 col3 equ">=</button>
+			<button value="h" class="row1 col2 lrow1 lcol1 btn-history" id="his">History</button>
+			<button value="+-" class="row2 col1 lrow3 lcol2 plus-minus">+/&ndash;</button>
+			<button value="0" class="row6 col1 lrow4 lcol3">0</button>
+			<button value="1" class="row5 col1 lrow3 lcol3">1</button>
+			<button value="2" class="row5 col2 lrow3 lcol4">2</button>
+			<button value="3" class="row5 col3 lrow3 lcol5">3</button>
+			<button value="4" class="row4 col1 lrow2 lcol3">4</button>
+			<button value="5" class="row4 col2 lrow2 lcol4">5</button>
+			<button value="6" class="row4 col3 lrow2 lcol5">6</button>
+			<button value="7" class="row3 col1 lrow1 lcol3">7</button>
+			<button value="8" class="row3 col2 lrow1 lcol4">8</button>
+			<button value="9" class="row3 col3 lrow1 lcol5">9</button>
+			<button value="." class="row6 col2 lrow4 lcol4">.</button>
+			<button value="/" class="row2 col4 lrow1 lcol6">&divide;</button>
+			<button value="*" class="row3 col4 lrow2 lcol6">&times;</button>
+			<button value="-" class="row4 col4 lrow3 lcol6">&ndash;</button>
+			<button value="+" class="row5 col4 lrow4 lcol6">+</button>
+			<button value="(" class="row2 col2 lrow2 lcol1">(</button>
+			<button value=")" class="row2 col3 lrow2 lcol2">)</button>
+			<button value="b" class="row1 col4 lrow4 lcol1" id="bs"></button>
+			<button value="c" class="row1 col1 lrow3 lcol1">c</button>
+			<button value="=" class="row6 col3 lrow4 lcol5 equ">=</button>
 		</div>
-	</div>
-	<div id="landscape">
-		<div class="statusbar"></div>
-		<p>This app does not work in landscape.</p>
 	</div>
 	<div id="install">
 		<div id="instructions">
