Better truncating of equation string
- it is now fully dynamic based on the width of the display and
characters in the string (issue #33)

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		</div>
 		<div class="statusbar"></div>
 		<div id="result">0</div>
-		<div id="equation"></div>
+		<div id="equation"><div id="eq"></div></div>
 		<div id="keypad">
 			<button value="h" class="row1 col2 lrow1 lcol1 btn-history" id="his">History</button>
 			<button value="+-" class="row2 col1 lrow2 lcol1 plus-minus">+/&ndash;</button>
