Fixed minus sign
- previous had incorrectly used an en dash

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 			<button value="." class="row6 col2 lrow4 lcol4">.</button>
 			<button value="/" class="row2 col4 lrow1 lcol6">&divide;</button>
 			<button value="*" class="row3 col4 lrow2 lcol6">&times;</button>
-			<button value="-" class="row4 col4 lrow3 lcol6">&ndash;</button>
+			<button value="-" class="row4 col4 lrow3 lcol6">&minus;</button>
 			<button value="+" class="row5 col4 lrow4 lcol6">+</button>
 			<button value="(" class="row2 col2 lrow3 lcol1">(</button>
 			<button value=")" class="row2 col3 lrow3 lcol2">)</button>
