--- a/index.html
+++ b/index.html
@@ -19,45 +19,45 @@
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/touch-icon-iphone-114.png">
 </head>
 <body>
-	<div id="calculator">
+	<div id="calculator" class="calculator">
 		<div class="statusbar"></div>
 		<div id="history">
 			<div class="navbar">Your History<span id="history-close">&times;</span></div>
 			<ul id="list"></ul>
 			<p id="history-help">Your most recent results will be saved here every time you tap the equals button. A quick tap of one of these will use it in the current equation.<br/><br/>Tap and hold on the &lsquo;&times;&rsquo; button to clear your history.</p>
 		</div>
-		<div id="application">
-			<div id="result">0</div>
-			<div id="equation"><div id="eq"></div></div>
-			<div id="keypad">
-				<button value="h" class="row1 col2 lrow1 lcol1 btn-history" id="his">History</button>
-				<button value="+-" class="row2 col1 lrow2 lcol1 plus-minus">+/&ndash;</button>
-				<button value="0" class="row6 col1 lrow4 lcol3">0</button>
-				<button value="1" class="row5 col1 lrow3 lcol3">1</button>
-				<button value="2" class="row5 col2 lrow3 lcol4">2</button>
-				<button value="3" class="row5 col3 lrow3 lcol5">3</button>
-				<button value="4" class="row4 col1 lrow2 lcol3">4</button>
-				<button value="5" class="row4 col2 lrow2 lcol4">5</button>
-				<button value="6" class="row4 col3 lrow2 lcol5">6</button>
-				<button value="7" class="row3 col1 lrow1 lcol3">7</button>
-				<button value="8" class="row3 col2 lrow1 lcol4">8</button>
-				<button value="9" class="row3 col3 lrow1 lcol5">9</button>
-				<button value="." class="row6 col2 lrow4 lcol4">.</button>
-				<button value="/" class="row2 col4 lrow1 lcol6">&divide;</button>
-				<button value="*" class="row3 col4 lrow2 lcol6">&times;</button>
-				<button value="-" class="row4 col4 lrow3 lcol6">&minus;</button>
-				<button value="+" class="row5 col4 lrow4 lcol6">+</button>
-				<button value="(" class="row2 col2 lrow3 lcol1">(</button>
-				<button value=")" class="row2 col3 lrow3 lcol2">)</button>
-				<button value="b" class="row1 col4 lrow4 lcol2" id="bs"></button>
-				<button value="c" class="row1 col1 lrow4 lcol1">c</button>
-				<button value="=" class="row6 col3 lrow4 lcol5 equ">=</button>
+		<div id="application" class="application">
+			<div id="result" class="result">0</div>
+			<div id="equation" class="equation"><div id="eq" class="eq"></div></div>
+			<div id="keypad" class="keypad">
+				<button value="c">c</button>
+				<button value="h" id="his" class="btn-history">History</button>
+				<button value="b" id="bs" class="btn-backspace"></button>
+				<button value="+-" class="btn-plus-minus">+/&minus;</button>
+				<button value="(">(</button>
+				<button value=")">)</button>
+				<button value="/" class="operator">&divide;</button>
+				<button value="7">7</button>
+				<button value="8">8</button>
+				<button value="9">9</button>
+				<button value="*" class="operator">&times;</button>
+				<button value="4">4</button>
+				<button value="5">5</button>
+				<button value="6">6</button>
+				<button value="-" class="operator">&minus;</button>
+				<button value="1">1</button>
+				<button value="2">2</button>
+				<button value="3">3</button>
+				<button value="+" class="operator">+</button>
+				<button value="0">0</button>
+				<button value=".">.</button>
+				<button value="=" class="btn-equals">=</button>
 			</div>
 		</div>
 	</div>
-	<div id="install">
-		<div id="instructions">
-			<div id="app-icon"></div>
+	<div id="install" class="install">
+		<div class="instructions">
+			<div class="app-icon"></div>
 			<span>Add to Home Screen</span><br/>
 			to install on the iPhone
 		</div>
