Added remaining button handler functions

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="statusbar"></div>
 		<div id="history">
 			<div class="navbar">Your History<span id="history-close">&times;</span></div>
-			<ul id="list"></ul>
+			<ul id="history-list"></ul>
 			<p id="history-help">Your most recent results will be saved here every time you tap the equals button. A quick tap of one of these will use it in the current equation.<br/><br/>Tap and hold on the &lsquo;&times;&rsquo; button to clear your history.</p>
 		</div>
 		<div id="application" class="application">
