Added button flashes for history and clear
- closes issue #39

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 			<div id="result" class="result">0</div>
 			<div id="equation" class="equation"><div id="eq" class="eq"></div></div>
 			<div id="keypad" class="keypad">
-				<button value="c" class="btn-clear">c</button>
-				<button value="h" class="btn-history">History</button>
+				<button value="c" class="btn-clear" id="btn-clear">c</button>
+				<button value="h" class="btn-history" id="btn-history">History</button>
 				<button value="b" class="btn-backspace" id="bs"></button>
 				<button value="+-" class="btn-plus-minus">+/&minus;</button>
 				<button value="(" class="btn-bracket">(</button>
