Updated version number

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Calculator - A calculator web app for iPhone</title>
 	
 	<meta name="author" content="Phil Buchanan">
-	<meta name="description" content="A minimal calculator for iPhone with support for backspace, brackets and history.">
+	<meta name="description" content="A minimal calculator for iPhone and iPad with support for backspace, brackets and history.">
 	
 	<meta name="viewport" content="initial-scale=1, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
