Renamed backspace button ID

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<!--html lang="en" manifest="calculator.appcache"-->
-<html lang="en">
+<!--html lang="en-CA" manifest="calculator.appcache"-->
+<html lang="en-CA">
 <head>
 	<meta charset="utf-8">
 	<title>Calculator - A calculator web app for iPhone</title>
@@ -37,7 +37,7 @@
 			<div id="keypad" class="keypad">
 				<button value="c" class="btn-clear" id="btn-clear">c</button>
 				<button value="h" class="btn-history" id="btn-history">History</button>
-				<button value="b" class="btn-backspace" id="bs"></button>
+				<button value="b" class="btn-backspace" id="btn-backspace"></button>
 				<button value="+-" class="btn-plus-minus">+/&minus;</button>
 				<button value="(" class="btn-bracket">(</button>
 				<button value=")" class="btn-bracket">)</button>
