Fixed bounce scrolling when history list is empty
- closes issue #43

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<div class="statusbar"></div>
 		<div id="history" class="history">
 			<div class="history-titlebar">History<span id="history-close" class="history-close">&times;</span></div>
-			<div class="history-list-scroll">
+			<div id="history-list-scroll" class="history-list-scroll">
 				<ul id="history-list" class="history-list"></ul>
 			</div>
 		</div>
