Added active state for operators

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
 				<button value="+-" class="btn-plus-minus">+/&minus;</button>
 				<button value="(" class="btn-bracket">(</button>
 				<button value=")" class="btn-bracket">)</button>
-				<button value="/" class="btn-operator">&divide;</button>
+				<button value="/" class="btn-operator" id="btn-divide">&divide;</button>
 				<button value="7" class="btn-digit">7</button>
 				<button value="8" class="btn-digit">8</button>
 				<button value="9" class="btn-digit">9</button>
-				<button value="*" class="btn-operator">&times;</button>
+				<button value="*" class="btn-operator" id="btn-multiply">&times;</button>
 				<button value="4" class="btn-digit">4</button>
 				<button value="5" class="btn-digit">5</button>
 				<button value="6" class="btn-digit">6</button>
-				<button value="-" class="btn-operator">&minus;</button>
+				<button value="-" class="btn-operator" id="btn-subtract">&minus;</button>
 				<button value="1" class="btn-digit">1</button>
 				<button value="2" class="btn-digit">2</button>
 				<button value="3" class="btn-digit">3</button>
-				<button value="+" class="btn-operator">+</button>
+				<button value="+" class="btn-operator" id="btn-add">+</button>
 				<button value="0" class="btn-digit">0</button>
 				<button value="." class="btn-decimal">.</button>
 				<button value="=" class="btn-equals">=</button>
