--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
 	<link rel="apple-touch-icon-precomposed" sizes="76x76"   href="assets/touch-icon-iphone-76.png">
 </head>
 <body>
+	<div id="app">
+		<div>{{ result }}</div>
+		<template v-for="n in 10">
+			<button v-on:click="appendDigit(n)">{{ n }}</button>
+		</template>
+		<button v-on:click="appendOperator('/', $event)">&divide;</button>
+		<button v-on:click="appendOperator('*', $event)">&times;</button>
+		<button v-on:click="appendOperator('-', $event)">&minus;</button>
+		<button v-on:click="appendOperator('+', $event)">+</button>
+		<button v-on:click="appendBracket('(')">(</button>
+		<button v-on:click="appendBracket(')')">)</button>
+	</div>
 	<script src="js/vue.min.js"></script>
 	<script src="js/app.js"></script>
 </body>
