#60 Fixed iOS 10 issues

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="author" content="Phil Buchanan">
 	<meta name="description" content="A minimal calculator for iPhone and iPad with support for backspace, brackets and history.">
 
-	<meta name="viewport" content="initial-scale=1, user-scalable=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="default">
 	<meta name="apple-mobile-web-app-title" content="Calculator">
@@ -60,14 +60,6 @@
 				<button value="=" class="keypad-button keypad-button--wide keypad-button--equals">=</button>
 			</div>
 		</div>
-	</div>
-	<div class="installation">
-		<div class="instructions">
-			<img src="assets/app-icon-large.png" alt="Calculator icon" width="125" height="125" class="app-icon">
-			<span class="add-to-home-screen">Add to Home Screen</span><br/>
-			to install on the iPhone
-		</div>
-		<a href="https://twitter.com/philbuchanan" target="_blank" class="twitter-link">@philbuchanan</a>
 	</div>
 	<script src="js/script.js" type="text/javascript"></script>
 </body>
