--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="apple-mobile-web-app-title" content="Calculator">
 	<meta name="format-detection" content="telephone=no">
 
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 
 	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/touch-icon-iphone-114.png">
 	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="assets/touch-icon-iphone-120.png">
@@ -23,44 +23,10 @@
 	<link rel="apple-touch-icon-precomposed" sizes="76x76"   href="assets/touch-icon-iphone-76.png">
 </head>
 <body>
-	<div id="calculator" class="app">
-		<div id="history" class="history-container">
-			<div class="history-title-bar">History<span id="history-close" class="history-close-button">&times;</span></div>
-			<div id="history-list-scroll" class="history-list-scroll">
-				<ul id="history-list" class="history-list"></ul>
-			</div>
-		</div>
-		<div id="application" class="application">
-			<div class="display">
-				<div id="result" class="result">0</div>
-				<div id="equation" class="equation"><div id="eq" class="eq"></div></div>
-			</div>
-			<div id="keypad" class="keypad">
-				<button value="c" class="keypad-button keypad-button--clear" id="btn-clear">c</button>
-				<button value="h" class="keypad-button keypad-button--wide keypad-button--history" id="btn-history">History</button>
-				<button value="b" class="keypad-button keypad-button--backspace" id="btn-backspace"></button>
-				<button value="+-" class="keypad-button keypad-button--plus-minus">+/&minus;</button>
-				<button value="(" class="keypad-button keypad-button--bracket">(</button>
-				<button value=")" class="keypad-button keypad-button--bracket">)</button>
-				<button value="/" class="keypad-button keypad-button--operator" id="btn-divide">&divide;</button>
-				<button value="7" class="keypad-button">7</button>
-				<button value="8" class="keypad-button">8</button>
-				<button value="9" class="keypad-button">9</button>
-				<button value="*" class="keypad-button keypad-button--operator" id="btn-multiply">&times;</button>
-				<button value="4" class="keypad-button">4</button>
-				<button value="5" class="keypad-button">5</button>
-				<button value="6" class="keypad-button">6</button>
-				<button value="-" class="keypad-button keypad-button--operator" id="btn-subtract">&minus;</button>
-				<button value="1" class="keypad-button">1</button>
-				<button value="2" class="keypad-button">2</button>
-				<button value="3" class="keypad-button">3</button>
-				<button value="+" class="keypad-button keypad-button--operator" id="btn-add">+</button>
-				<button value="0" class="keypad-button">0</button>
-				<button value="." class="keypad-button keypad-button--decimal">.</button>
-				<button value="=" class="keypad-button keypad-button--wide keypad-button--equals">=</button>
-			</div>
-		</div>
+	<div class="app" id="app">
+
 	</div>
-	<script src="js/script.js" type="text/javascript"></script>
+	<script type="text/javascript" src="js/vue.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
