#75 Reenabled app cache

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!--html lang="en-CA" manifest="calculator.appcache"-->
-<html lang="en-CA">
+<html lang="en-CA" manifest="calculator.appcache">
 <head>
 	<meta charset="utf-8">
 	<title>Calculator - A calculator web app for iPhone</title>
