Added installation screen back

--- a/index.html
+++ b/index.html
@@ -60,6 +60,14 @@
 			</div>
 		</div>
 	</div>
+	<div class="installation">
+		<div class="instructions">
+			<div class="app-icon"></div>
+			<span>Add to Home Screen</span><br/>
+			to install on the iPhone
+		</div>
+		<a href="https://twitter.com/philbuchanan" target="_blank" class="twitter">@philbuchanan</a>
+	</div>
 	<script src="js/script.js" type="text/javascript"></script>
 </body>
 </html>
